Replace `javassist` with `ByteBuddy`